--- a/courses/current_courses/b706/b706_week_4/b706_week_4.qmd
+++ b/courses/current_courses/b706/b706_week_4/b706_week_4.qmd
@@ -51,3 +51,30 @@ execute:
 * Depending on the neds of the investigator may be the complete SAP 
 
 
+### Wednesday
+
+**The Written part is often the easy part!**
+
+* Communication between two individuals
+  - often with different expertise
+  - Often from different fields
+  - often with their own jargon in each field
+
+**Thinking about the POWER of a SAP**
+
+* Prepare
+  - Handle essential matters before you start the interaction
+  - Allow enough time to transition physically , mentally, and emotionally from your previous activity to this interaction
+* Open
+  - Agree on a time frame for the interaction; identify and agree on what each of you want outo of this particular interaction and what each is willing and able to do to produce that result
+  - identify completely what your client wants from the interaction and how she/he plans to use it 
+* Work
+  - Address what is wanted from the interaction
+  - When explaining complex material, stop frequently to give your client a chance to eexplain to you what s/he has heard.
+* End
+  - Develop an implemental plan and close the intraction on time.
+  - Allow enough time so that both of you will know what to do next.
+* Reflect
+  - Consider what worked and what did not work in the interaction
+  - Take the time to do this step. Do not skip it.
+
